DailySST/v2/logs/sst_fetch_2026-05-03.log
  File "/home/runner/work/SSTv2/SSTv2/sst_data_fetcher.py", line 45
    // ── Color helpers ─────────────────────────────────────────────────────────────
       ^
SyntaxError: invalid character '─' (U+2500)
